--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       <script>
         document.write('<script src="./config/index.js?t=' + new Date().getTime() + '"><\/script>');
       </script>
+
+      <link rel="stylesheet" href="http://at.alicdn.com/t/font_2083142_agteqaprwnu.css">
     <% }else { %>
       <!-- 开发环境 -->
       <link rel="shortcut icon" type="image/x-icon" href="./static/img/favicon.ico">
