--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="google" content="notranslate"> 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>会议预约系统</title>
     <% if (process.env.NODE_ENV === 'production') { %>
