--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta  content="notranslate">
+    <meta name="google" content="notranslate">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>会议预约系统</title>
     <% if (process.env.NODE_ENV === 'production') { %>
